added some examples with spark

--- a/pyspark/notebooks/read_json.ipynb
+++ b/pyspark/notebooks/read_json.ipynb
@@ -35,7 +35,7 @@
    "source": [
     "spark = SparkSession \\\n",
     "        .builder \\\n",
-    "        .appName('my_app') \\\n",
+    "        .appName('read_json') \\\n",
     "        .getOrCreate()"
    ]
   },
@@ -54,7 +54,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df = sqlContext.read.json(\"/data/github-2016-10-11-11.json\")"
@@ -938,7 +940,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    ""
+   ]
   }
  ],
  "metadata": {
@@ -950,7 +954,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 3.0
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
@@ -961,5 +965,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 0
 }
